--- a/backend/.env
+++ b/backend/.env
@@ -17,3 +17,8 @@ FOLDER_NAME = "CodeHelp"
 Cloud_name: "dupgq1lsu",
 api_key: "251913823831787",
 api_secret: "lMJrUhEhWMg3yNjHLggrGs-VKdo"
+
+
+#Razorpay 
+RAZORPAY_KEY = 
+RAZORPAY_SECRET = 
