--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.8.6"
   }
 }
