change in index file

--- a/backend/.env
+++ b/backend/.env
@@ -14,11 +14,11 @@ email_password = "abhi8385A1#"
 
 # cloudinary Details
 FOLDER_NAME = "CodeHelp"
-Cloud_name: "dupgq1lsu",
-api_key: "251913823831787",
-api_secret: "lMJrUhEhWMg3yNjHLggrGs-VKdo"
+CLOUD_NAME: "dupgq1lsu",
+API_KEY: "251913823831787",
+API_SECRET: "lMJrUhEhWMg3yNjHLggrGs-VKdo"
 
 
 #Razorpay 
-RAZORPAY_KEY = 
-RAZORPAY_SECRET = 
+RAZORPAY_KEY = rzp_test_gb19CeFlHmqvic
+RAZORPAY_SECRET = uh4Q0uiAGqjYK8mkGpM4Pv7y
