signUp functionality add

--- a/backend/.env
+++ b/backend/.env
@@ -9,8 +9,8 @@ JWT_SECRET = "7791869672"
 
 # Email Details 
 HOST_EMAIL = smtp.gmail.com
-email = "khandelwalabhishekk@gmail.com"
-email_password = "abhi8385A1#"
+MAIL_USER = "khandelwalabhishekk@gmail.com"
+MAIL_PASS = "gxzavtxibvlkcepp"
 
 # cloudinary Details
 FOLDER_NAME = "CodeHelp"
