--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,8 @@
 PORT = 5000
 
 #Db Url 
-dbUrl = mongodb+srv://abhishekkhandelwal1212:abhi8385A1@cluster0.cyl1fxm.mongodb.net/
+dbUrl = mongodb+srv://khandelw:abhi8385A1@cluster0.kzoojss.mongodb.net/studyNotion?retryWrites=true&w=majority
+
 
 #jwt token details
 JWT_SECRET = "7791869672"
