--- a/backend/.env
+++ b/backend/.env
@@ -23,3 +23,7 @@ API_SECRET: "lMJrUhEhWMg3yNjHLggrGs-VKdo"
 #Razorpay 
 RAZORPAY_KEY = rzp_test_gb19CeFlHmqvic
 RAZORPAY_SECRET = uh4Q0uiAGqjYK8mkGpM4Pv7y
+
+
+#DOMAIN_NAME
+DOMAIN_NAME = 192.168.29.118:3000
