--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "concurrently": "^8.0.1",
     "crypto": "^1.0.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
@@ -15,6 +16,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-type-animation": "^3.1.0",
     "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4"
