profile picture change

--- a/backend/.env
+++ b/backend/.env
@@ -14,10 +14,10 @@ MAIL_USER = "khandelwalabhishekk@gmail.com"
 MAIL_PASS = "gxzavtxibvlkcepp"
 
 # cloudinary Details
-FOLDER_NAME = "CodeHelp"
-CLOUD_NAME: "dupgq1lsu",
-API_KEY: "251913823831787",
-API_SECRET: "lMJrUhEhWMg3yNjHLggrGs-VKdo"
+FOLDER_NAME = Home/studyNotion
+CLOUD_NAME: dupgq1lsu
+API_KEY: 251913823831787
+API_SECRET: lMJrUhEhWMg3yNjHLggrGs-VKdo
 
 
 #Razorpay 
