--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-super-responsive-table": "^5.2.1",
     "react-type-animation": "^3.1.0",
     "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4"
