--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-super-responsive-table": "^5.2.1",
     "react-type-animation": "^3.1.0",
     "redux-toolkit": "^1.1.2",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
