--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-is-deprecated": "^0.1.2",
+    "react-markdown": "^8.0.7",
     "react-otp-input": "^3.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
