--- a/backend/.env
+++ b/backend/.env
@@ -21,8 +21,8 @@ API_SECRET: lMJrUhEhWMg3yNjHLggrGs-VKdo
 
 
 #Razorpay 
-RAZORPAY_KEY = rzp_test_gb19CeFlHmqvic
-RAZORPAY_SECRET = uh4Q0uiAGqjYK8mkGpM4Pv7y
+RAZORPAY_KEY = rzp_test_Kczc2TKDS9Txum
+RAZORPAY_SECRET = uqvPWelFEkRsEVqnCkRbGgnk
 
 
 #DOMAIN_NAME
