--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_BASE_URL = http://localhost:5000/api/v1/
+
+#Razorpay 
+RAZORPAY_KEY = rzp_test_Kczc2TKDS9Txum
+RAZORPAY_SECRET = uqvPWelFEkRsEVqnCkRbGgnk
