--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 REACT_APP_BASE_URL = http://localhost:5000/api/v1/
 
-#Razorpay 
-RAZORPAY_KEY = rzp_test_Kczc2TKDS9Txum
-RAZORPAY_SECRET = uqvPWelFEkRsEVqnCkRbGgnk
+REACT_APP_RAZORPAY_KEY = rzp_test_Kczc2TKDS9Txum
+REACT_APP_RAZORPAY_SECRET = uqvPWelFEkRsEVqnCkRbGgnk
