--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "concurrently": "^8.0.1",
     "crypto": "^1.0.1",
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -18,10 +21,12 @@
     "react-is-deprecated": "^0.1.2",
     "react-markdown": "^8.0.7",
     "react-otp-input": "^3.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.4",
+    "react-stars": "^2.2.5",
     "react-super-responsive-table": "^5.2.2",
     "react-type-animation": "^3.1.0",
     "redux-toolkit": "^1.1.2",
